--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Meekdai",
     "subTitle":"童话是一种生活态度，仅此而已。",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://ibb.co/b1rCCPN",
     "GMEEK_VERSION":"last"
 }
