--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Meekdai",
+    "title":"白开",
     "subTitle":"童话是一种生活态度，仅此而已。",
     "avatarUrl":"https://ibb.co/b1rCCPN",
     "GMEEK_VERSION":"last"
