--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"白开",
     "subTitle":"童话是一种生活态度，仅此而已。",
-    "avatarUrl":"https://s2.loli.net/2024/05/07/oTZUEf6uSviOIPY.jpg][IMG]https://s2.loli.net/2024/05/07/oTZUEf6uSviOIPY.jpg[/IMG]",
+    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
