--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
-    "title":"白开的杂货铺",
-    "subTitle":"童话是一种生活态度，仅此而已。",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
-    "displayTitle":"白开的杂货铺"
+    "title": "新的博客标题",
+    "subTitle": "童话是一种生活态度，仅此而已。",
+    "avatarUrl": "https://github.githubassets.com/favicons/favicon.svg",
+    "GMEEK_VERSION": "last"
 }
 
